--- a/MicroArcSec.Client/Pages/_Layout.cshtml
+++ b/MicroArcSec.Client/Pages/_Layout.cshtml
@@ -8,12 +8,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+
     <link href="css/site.css" rel="stylesheet" />
+    <link href="/css/sigma-rule.css" rel="stylesheet" />
     <link href="MicroArcSec.Client.styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     @RenderBody()
