--- a/MicroArcSec.Client/Pages/SigmaRuleDetails.razor
+++ b/MicroArcSec.Client/Pages/SigmaRuleDetails.razor
@@ -16,44 +16,64 @@ else
         <h2 class="text-2xl font-bold mb-2">@Model.title</h2>
         <p class="text-gray-500 mb-4">@Model.description</p>
         <div>
-            <p class="text-gray-700 font-bold mb-2">Status:</p>
-            <p class="text-gray-500">@Model.status</p>
+            <h3 class="text-xl font-bold mb-2">Status:</h3>
+            <p class="text-gray-500" style="padding-left:25px">@Model.status</p>
         </div>
         <div class="mt-4">
             <h3 class="text-xl font-bold mb-2">Logsource</h3>
             <div>
-                <p class="text-gray-700 font-bold mb-2">Category:</p>
-                <p class="text-gray-500">@Model.logsource.category</p>
+                <h4 class="text-gray-700 font-bold mb-2" style="padding-left:25px">Category:</h4>
+                <p class="text-gray-500" style="padding-left:50px">@Model.logsource.category</p>
             </div>
         </div>
         @if (Model.detection is not null){
             <div class="mt-4">
             <h3 class="text-xl font-bold mb-2">Detection</h3>
             <div>
-                <p class="text-gray-700 font-bold mb-2">Condition:</p>
-                <p class="text-gray-500">@Model.detection.condition</p>
+                <h4 class="text-gray-700 font-bold mb-2" style="padding-left:25px">Condition:</h4>
+                <ul class="list-disc ml-4" style="padding-left:65px">
+                    <li class="text-gray-500">@Model.detection.condition</li>
+                </ul>
             </div>
                 @if(Model.detection.Selection is not null)
                 {
-                    <p class="text-gray-700 font-bold mb-2">Selections:</p>
-                    @foreach (var curi in @Model.detection.Selection.curi)
+                    <h4 class="text-xl font-bold mb-2" style="padding-left:25px">Selections:</h4>
+                    @if (Model.detection.Selection.curi.Count > 0)
                     {
-                        <p class="text-gray-500">@curi</p>
+                        <h4 class="text-gray-700 mb-2" style="padding-left:45px">c-uri:</h4>
+                        <ul class="list-disc ml-4" style="padding-left:85px">
+                            @foreach (var curi in @Model.detection.Selection.curi)
+                            {
+                                <li class="text-gray-500">@curi</li>
+                            }
+                        </ul>
                     }
-                    @foreach (var cmd in @Model.detection.Selection.cmd)
+                    @if (Model.detection.Selection.cmd.Count > 0)
                     {
-                        <p class="text-gray-500">@cmd</p>
+                        <h4 class="text-gray-700 mb-2" style="padding-left:45px">Command Line:</h4>
+                        <ul class="list-disc ml-4" style="padding-left:85px">
+                            @foreach (var cmd in @Model.detection.Selection.cmd)
+                            {
+                                <li class="text-gray-500">@cmd</li>
+                            }                    
+                        </ul>
                     }
-                    @foreach (var ip in @Model.detection.Selection.ip)
+                    @if (Model.detection.Selection.ip.Count > 0)
                     {
-                        <p class="text-gray-500">@ip</p>
+                        <h4 class="text-gray-700 mb-2" style="padding-left:45px">IP Address:</h4>
+                        <ul class="list-disc ml-4" style="padding-left:85px">
+                            @foreach (var ip in @Model.detection.Selection.ip)
+                            {
+                                <li class="text-gray-500">@ip</li>
+                            }
+                        </ul>
                     }
                 }
-                @if (Model.detection.fields is not null)
+                @if (Model.detection.fields.Count > 0)
                 {
                     <div class="mt-4">
-                        <h4 class="text-lg font-bold mb-2">Fields:</h4>
-                        <ul class="list-disc ml-4">
+                        <h4 class="text-lg font-bold mb-2" style="padding-left:25px">Fields:</h4>
+                        <ul class="list-disc ml-4" style="padding-left:65px">
                             @foreach (var field in Model.detection.fields)
                             {
                                 <li class="text-gray-500">@field</li>
@@ -61,11 +81,11 @@ else
                         </ul>
                     </div>
                 }
-                @if (Model.detection.FalsePositives is not null)
+                @if (Model.detection.FalsePositives.Count > 0)
                 {
                     <div class="mt-4">
-                        <h4 class="text-lg font-bold mb-2">False positives:</h4>
-                        <ul class="list-disc ml-4">
+                        <h4 class="text-lg font-bold mb-2" style="padding-left:25px">False positives:</h4>
+                        <ul class="list-disc ml-4" style="padding-left:65px">
                             @foreach (var fp in Model.detection.FalsePositives)
                             {
                                 <li class="text-gray-500">@fp</li>
@@ -74,14 +94,14 @@ else
                     </div>
                 }
             <div class="mt-4">
-                <p class="text-gray-700 font-bold mb-2">Level:</p>
-                <p class="text-gray-500">@Model.detection.level</p>
+                <h4 class="text-gray-700 font-bold mb-2" style="padding-left:25px">Level:</h4>
+                <p class="text-gray-500" style="padding-left:45px">@Model.detection.level</p>
             </div>
-                @if (Model.detection.tags is not null)
+                @if (Model.detection.tags.Count > 0)
                 {
                     <div class="mt-4">
-                        <h4 class="text-lg font-bold mb-2">Tags:</h4>
-                        <ul class="list-disc ml-4">
+                        <h4 class="text-lg font-bold mb-2" style="padding-left:25px">Tags:</h4>
+                        <ul class="list-disc ml-4" style="padding-left:65px">
                             @foreach (var tag in Model.detection.tags)
                             {
                                 <li class="text-gray-500">@tag</li>
