--- a/MicroArcSec.Client/_Imports.razor
+++ b/MicroArcSec.Client/_Imports.razor
@@ -8,7 +8,7 @@
 @using Microsoft.JSInterop
 @using MicroArcSec.Client
 @using MicroArcSec.Client.Shared
-@using GrpcService001
+@using GrpcFileService
 @using Grpc.Core
 @using Radzen
 @using Radzen.Blazor
