--- a/MicroArcSec.Client/wwwroot/css/sigma-rule.css
+++ b/MicroArcSec.Client/wwwroot/css/sigma-rule.css
@@ -1,15 +1,17 @@
 ﻿.container {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 .card {
     width: 18rem;
-    margin: 1rem;
+    max-width: 300px;
+    min-width: 300px;
+    flex-basis: calc(25% - 10px);
+    margin: 20px;
     box-shadow: 0px 0px 10px #ccc;
     border-radius: 10px;
-}
-
-.card {
-    padding:15px;
+    padding: 15px;
 }
 
 .card-title {
