--- a/MicroArcSec.Client/Pages/SigmaRule.razor
+++ b/MicroArcSec.Client/Pages/SigmaRule.razor
@@ -1,4 +1,5 @@
 ﻿@page "/sigma-rule"
+@using Grpc.Net.Client;
 @using YamlDotNet.Serialization
 @using YamlDotNet.Serialization.NamingConventions
 @using MicroArcSec.Client.Data;
@@ -35,8 +36,6 @@
 
     protected override async Task OnInitializedAsync()
     {
-        //var response = await HttpClient.GetAsync("rule.yaml");
-        //var yaml = await response.Content.ReadAsStringAsync();
         var yaml = await File.ReadAllTextAsync("H:\\sample.yaml");
         var deserializer = new DeserializerBuilder()
             .WithNamingConvention(UnderscoredNamingConvention.Instance)
@@ -47,7 +46,7 @@
         }
         catch (Exception ex)
         {
-            
+
             throw;
         }
     }
@@ -56,4 +55,13 @@
     {
         Navigation.NavigateTo($"/sigmaruledetails/{rule.id}", true);
     }
+
+    //private async Task FetchFilesFromGRPC()
+    //{
+    //    using var channel = GrpcChannel.ForAddress("https://localhost:5001");
+    //    var client = new FileTransfer.FileTransferClient(channel);
+    //    var request = new FileRequest { FilePath = filePath };
+    //    var response = await client.GetFileAsync(request);
+    //    return response.FileContent.ToByteArray();
+    //}
 }
