--- a/MicroArcSec.Client/Shared/NavMenu.razor
+++ b/MicroArcSec.Client/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">MicroArcSec</a>
+    <div class="container-fluid" style="padding-top:13px;">
+        <a class="navbar-brand" href="" style="text-align: center;display: block;">MicroArcSec</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,30 +10,15 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All" style="padding-left: 20px;">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-@*        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>*@
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="charts">
+            <NavLink class="nav-link" href="charts" style="padding-left: 20px;">
                 <span class="oi oi-plus" aria-hidden="true"></span> MicroArcSec Charts
             </NavLink>
         </div>
-        @*<div class="nav-item px-3">
-            <NavLink class="nav-link" href="sigma-rule">
-                <span class="oi oi-plus" aria-hidden="true"></span> SIGMA RULE
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>*@
     </nav>
 </div>
 
