--- a/MicroArcSec.Client/Pages/SigmaRuleDetails.razor
+++ b/MicroArcSec.Client/Pages/SigmaRuleDetails.razor
@@ -1,4 +1,4 @@
-﻿@page "/sigmaruledetails/{id}"
+﻿@page "/sigmaruledetails/{fileName}"
 @using Microsoft.AspNetCore.Components;
 @using MicroArcSec.Client.Data;
 @using YamlDotNet.Serialization;
@@ -26,16 +26,17 @@ else
                 <p class="text-gray-500" style="padding-left:50px">@Model.logsource.category</p>
             </div>
         </div>
-        @if (Model.detection is not null){
+        @if (Model.detection is not null)
+        {
             <div class="mt-4">
-            <h3 class="text-xl font-bold mb-2">Detection</h3>
-            <div>
-                <h4 class="text-gray-700 font-bold mb-2" style="padding-left:25px">Condition:</h4>
-                <ul class="list-disc ml-4" style="padding-left:65px">
-                    <li class="text-gray-500">@Model.detection.condition</li>
-                </ul>
-            </div>
-                @if(Model.detection.Selection is not null)
+                <h3 class="text-xl font-bold mb-2">Detection</h3>
+                <div>
+                    <h4 class="text-gray-700 font-bold mb-2" style="padding-left:25px">Condition:</h4>
+                    <ul class="list-disc ml-4" style="padding-left:65px">
+                        <li class="text-gray-500">@Model.detection.condition</li>
+                    </ul>
+                </div>
+                @if (Model.detection.Selection is not null)
                 {
                     <h4 class="text-xl font-bold mb-2" style="padding-left:25px">Selections:</h4>
                     @if (Model.detection.Selection.curi.Count > 0)
@@ -55,7 +56,7 @@ else
                             @foreach (var cmd in @Model.detection.Selection.cmd)
                             {
                                 <li class="text-gray-500">@cmd</li>
-                            }                    
+                            }
                         </ul>
                     }
                     @if (Model.detection.Selection.ip.Count > 0)
@@ -93,10 +94,10 @@ else
                         </ul>
                     </div>
                 }
-            <div class="mt-4">
-                <h4 class="text-gray-700 font-bold mb-2" style="padding-left:25px">Level:</h4>
-                <p class="text-gray-500" style="padding-left:45px">@Model.detection.level</p>
-            </div>
+                <div class="mt-4">
+                    <h4 class="text-gray-700 font-bold mb-2" style="padding-left:25px">Level:</h4>
+                    <p class="text-gray-500" style="padding-left:45px">@Model.detection.level</p>
+                </div>
                 @if (Model.detection.tags.Count > 0)
                 {
                     <div class="mt-4">
@@ -109,48 +110,43 @@ else
                         </ul>
                     </div>
                 }
-        </div>
+            </div>
         }
     </div>
     <button class="custom-button" @onclick="GoBack">Go Back</button>
 }
 @code {
     [Parameter]
-    public string Id { get; set; }
+    public string FileName { get; set; }
 
     private SigmaRuleModel Model { get; set; }
 
     protected override void OnInitialized()
     {
-        Model = GetRuleById(Id);
+        Model = GetRuleById(FileName);
         base.OnInitialized();
     }
 
-    private SigmaRuleModel GetRuleById(string id)
+    private SigmaRuleModel GetRuleById(string fileName)
     {
-        var yaml = File.ReadAllText("H:\\sample.yaml");
+        var yaml = File.ReadAllText(@".\Files\" + fileName + ".yaml");
         var deserializer = new DeserializerBuilder()
             .WithNamingConvention(UnderscoredNamingConvention.Instance)
             .Build();
         try
         {
-            var rules = deserializer.Deserialize<SigmaRuleModel[]>(yaml);
-            var rule = rules.Where(x => x.id == Id).FirstOrDefault();
-            if (rule != null)
-            {
-                return rule; 
-            }
+            var rule = deserializer.Deserialize<SigmaRuleModel>(yaml);
+            return rule;
         }
         catch (Exception ex)
         {
 
             throw;
         }
-        return new SigmaRuleModel();
     }
 
     void GoBack()
     {
-        Navigation.NavigateTo("/sigma-rule");
+        Navigation.NavigateTo("/");
     }
 }
