--- a/MicroArcSec.Client/Pages/_Host.cshtml
+++ b/MicroArcSec.Client/Pages/_Host.cshtml
@@ -11,3 +11,14 @@
 <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 <script src="https://unpkg.com/@@antv/g2plot@1.1.28/dist/g2plot.js"></script>
 <script src="_content/AntDesign.Charts/ant-design-charts-blazor.js"></script>
+
+<script>
+    function highlightNewRow(rowId) {
+        var newRow = document.getElementById("row-" + rowId);
+        newRow.classList.add("highlight");
+
+        setTimeout(function () {
+            newRow.classList.remove("highlight");
+        }, 3000);
+    }
+</script>
