--- a/MicroArcSec.Client/Pages/_Layout.cshtml
+++ b/MicroArcSec.Client/Pages/_Layout.cshtml
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
     <link href="css/site.css" rel="stylesheet" />
     <link href="/css/sigma-rule.css" rel="stylesheet" />
