--- a/MicroArcSec.Client/wwwroot/css/sigma-rule.css
+++ b/MicroArcSec.Client/wwwroot/css/sigma-rule.css
@@ -110,3 +110,90 @@
     color: #ffffff; /* Change text color on hover */
     border-color: #ffffff; /* Change border color on hover */
 }
+
+.table-container {
+    overflow-x: auto;
+    max-width: 100%;
+    margin-bottom: 10px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+thead tr {
+    background-color: #f5f5f5;
+}
+
+thead th {
+    text-align: left;
+    padding: 8px;
+}
+
+tbody td {
+    border-bottom: 1px solid #ddd;
+    padding: 8px;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+button {
+    background-color: #f5f5f5;
+    border: none;
+    color: black;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+    button.active {
+        background-color: #4CAF50;
+        color: white;
+        pointer-events: none;
+    }
+
+    button.prev,
+    button.next {
+        background-color: #ddd;
+    }
+
+        button.prev:hover,
+        button.next:hover {
+            background-color: #bbb;
+        }
+
+.high-level {
+    color: red;
+}
+
+.medium-level {
+    color: orange;
+}
+
+.low-level {
+    color: black;
+}
+
+.highlight {
+    background-color: inherit;
+    animation: highlight 3s ease-out;
+}
+
+@keyframes highlight {
+    from {
+        background-color: yellow;
+    }
+
+    to {
+        background-color: inherit;
+    }
+}
