--- a/MicroArcSec.Client/Shared/NavMenu.razor
+++ b/MicroArcSec.Client/Shared/NavMenu.razor
@@ -11,12 +11,32 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All" style="padding-left: 20px;">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <i class="fas fa-home"></i>
+                <span class="oi" aria-hidden="true"></span> Top 5 Security Logs
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="logslist" style="padding-left: 20px;">
+                <i class="fas fa-list-ul"></i>
+                <span class="oi" aria-hidden="true"></span> All Security Logs 
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="charts" style="padding-left: 20px;">
-                <span class="oi oi-plus" aria-hidden="true"></span> MicroArcSec Charts
+                <i class="fas fa-chart-bar"></i>
+                <span class="oi" aria-hidden="true"></span> MicroArcSec Charts
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="settings" style="padding-left: 20px;">
+                <i class="fas fa-cog"></i>
+                <span class="oi" aria-hidden="true"></span> Settings
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="aboutus" style="padding-left: 20px;">
+                <i class="fas fa-info-circle"></i>
+                <span class="oi" aria-hidden="true"></span> About Us
             </NavLink>
         </div>
     </nav>
