--- a/MicroArcSec.Client/wwwroot/css/sigma-rule.css
+++ b/MicroArcSec.Client/wwwroot/css/sigma-rule.css
@@ -117,16 +117,8 @@
     margin-bottom: 10px;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
 
-thead tr {
-    background-color: #f5f5f5;
-}
-
-thead th {
+/*thead th {
     text-align: left;
     padding: 8px;
 }
@@ -134,6 +126,28 @@ thead th {
 tbody td {
     border-bottom: 1px solid #ddd;
     padding: 8px;
+}*/
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+thead th {
+    background-color: #6c6c6c;
+    border: 1px solid #ddd;
+    color: #fff;
+    text-align: center;
+    height: 60px;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tbody td {
+    padding: 10px;
+    border: 1px solid #ddd;
 }
 
 .pagination {
@@ -197,3 +211,30 @@ button {
         background-color: inherit;
     }
 }
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+    .pagination button {
+        background-color: #fff;
+        border: 1px solid #ddd;
+        color: #333;
+        cursor: pointer;
+        font-size: 14px;
+        margin: 0 5px;
+        padding: 5px 10px;
+    }
+
+        .pagination button:hover {
+            background-color: #ddd;
+        }
+
+    .pagination .active {
+        background-color: #333;
+        color: #fff;
+        font-weight: bold;
+    }
