--- a/MicroArcSec.Client/Pages/AboutUs.razor
+++ b/MicroArcSec.Client/Pages/AboutUs.razor
@@ -1,7 +1,28 @@
-﻿@page "/aboutus"
+﻿@page "/contactus"
 
-<h3>AboutUs</h3>
+<h1>Contact Us</h1>
 
-@code {
-
-}
+<div class="about-container">
+    <div class="about-box">
+        <div class="image-container">
+            <img src="/images/bizhan.jpeg" alt="Developer 1">
+        </div>
+        <div class="info-container">
+            <h2>Bizhan Beiragh Dar</h2>
+            <p><i class="fa fa-user" style="padding-right:10px;"></i>Full-Stack Developer</p>
+            <p><i class="fab fa-linkedin" style="padding-right:10px;"></i><a target="_blank" href="https://www.linkedin.com/in/bijan-beyraghdar">LinkedIn</a></p>            
+            <p><i class="fas fa-envelope" style="padding-right:10px;"></i>Email: bbiragh@nyit.edu</p>
+        </div>
+    </div>
+    <div class="about-box">
+        <div class="image-container">
+            <img src="/images/mina.jpeg" alt="Developer 1">
+        </div>
+        <div class="info-container">
+            <h2>Mina Torkian</h2>
+            <p><i class="fa fa-user" style="padding-right:10px;"></i>Full-Stack Developer</p>
+            <p><i class="fab fa-linkedin" style="padding-right:10px;"></i><a target="_blank" href="https://www.linkedin.com/in/mina-torkian">LinkedIn</a></p>           
+            <p><i class="fas fa-envelope" style="padding-right:10px;"></i>Email: mtorkian@nyit.edu</p>
+        </Div>
+    </div>
+</div>
