--- a/MicroArcSec.Client/Shared/NavMenu.razor
+++ b/MicroArcSec.Client/Shared/NavMenu.razor
@@ -34,9 +34,9 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="aboutus" style="padding-left: 20px;">
+            <NavLink class="nav-link" href="contactus" style="padding-left: 20px;">
                 <i class="fas fa-info-circle"></i>
-                <span class="oi" aria-hidden="true"></span> About Us
+                <span class="oi" aria-hidden="true"></span> Contact Us
             </NavLink>
         </div>
     </nav>
